<resources>
    <string-array name="order_array">
        <item> <i>Order By</i> </item>
        <item>Distance</item>
        <item>Score</item>
    </string-array>
    <string-array name="distance_array">
        <item> <i>DISTANCE</i> </item>
        <item>100m</item>
        <item>500m</item>
        <item>1000m</item>
        <item>2000m</item>
    </string-array>
    <string-array name="price_array">
        <item> <i>PRICE</i> </item>
        <item>5€</item>
        <item>10€</item>
        <item>20€</item>
        <item>50€</item>
    </string-array>
    <string-array name="type_array">
        <item> <i>CUSINE TYPE</i> </item>
        <item>ETHNIC</item>
        <item>PIZZA</item>
        <item>PASTA</item>
    </string-array>
    <string-array name="time_array">
        <item> <i>LUNCH TIME</i> </item>
        <item>10.00-15.00</item>
        <item>15.00-19.00</item>
        <item>19.00-23.00</item>
    </string-array>
    <string name="app_name">Lab3</string>
    <string name="quantity_available">Availability:</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_prova">Prova</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="restaurant_profile">restaurant_profile</string>
    <string name="title_activity_restaurant_profile">RestaurantProfile</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_my_scrolling">MyScrollingActivity</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="see_more">SEE MORE</string>
    <string name="user_name">User name</string>
    <string name="date_sample">dd/MM/yy</string>
    <string name="see_less">SEE LESS</string>
    <string name="review_title">\"Lorem ipsum\"</string>
    <string name="title_tab_menu">Menu</string>
    <string name="title_tab_reviews">Reviews</string>
    <string name="title_tab_info">Info</string>
    <string name="general_info">General Info</string>
    <string name="restaurantName">Restaurant Name</string>
    <string name="address">Address</string>
    <string name="university">Nearby University</string>
    <string name="food_and_ambience">Food and Ambience</string>
    <string name="Cuisine">Cuisine Type</string>
    <string name="shortDescription">Short Description</string>
    <string name="timetables_edit">Timetables</string>
    <string name="openingHour">Opening Hour</string>
    <string name="select">Select</string>
    <string name="closingHour">Closing Hour</string>
    <string name="timetables_info">Timetables Info</string>
    <string name="extra_info">Extra Info</string>
    <string name="payment">Payment Methods</string>
    <string name="services">Additional Services</string>
    <string name="reviews_number">Based on 144 reviews</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="show_selected">SHOW SELECTED</string>
    <string name="title_activity_da_cancellare">daCancellare</string>
    <string name="title_activity_make_reservation">MakeReservation</string>
    <string name="add_dialog_button">ADD</string>
    <string name="cancel_dialog_button">CANCEL</string>
    <string name="uncheck_dialog_title">Are you sure you want to remove this item from the chart?</string>
    <string name="ok">Ok</string>
    <string name="remove">Remove</string>
    <string name="dont_remove">Don\'t remove</string>
    <string name="empty_chart">The chart is empty</string>
    <string name="select_hour">Select reservation hour</string>
    <string name="select_date">Select reservation date</string>
    <string name="empty_cart">The cart is empty</string>
    <string name="order_summary">Order summary</string>
    <string name="total_price">Total Price</string>
    <string name="reservation_restaurant_name">Restaurant name</string>
    <string name="restaurant_name">Restaurant name</string>
</resources>